--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="error">Error finding image</string>
     <string name="go">GO</string>
     <string name="permission_denied">Permission denied</string>
+    <string name="no_faces_message">No faces detected</string>
     <string name="imageview_description">The imageview that contains the emojified picture</string>
 </resources>
